# dummy_robot_test

./: README.md  frames.gv  package.xml  setup.cfg  setup.py
conf/: dummy_robot.rviz
dummy_robot_test/: dummy_joint_states.py  one_joint_state_publisher.py
launch/: dummy_robot_test_launch.py
